client/sass/layout/_article.scss
section.container section.space {
    
    article {
        color: $colorType;
        position: absolute;
        backface-visibility: hidden;
        line-height: 1.5em;
        transform-origin:           bottom right;
        -webkit-transform-origin:   bottom right;
        @include typeHeader;
        
        // EVENTS
        
        &:hover, &.hover, &.dragging, &.ui-draggable-dragging/* , &.add-element, &.editing  */{
            z-index: 9999999;

            author {
                opacity: 1;
                @include transform(translate3d(0, -$leading * 1.575, 0));
            }
        }
        
        &:hover, &.hover {
            cursor: move;
            
            > .card {
                @include cardHover;
                
//                 &.text {
//                     background-color: $colorAccent;
//                 }
            }
        }

        &.locked {
            opacity: .25;
            -webkit-filter: grayscale(1);
        }

        &.resizing {
            .card .ui-resizable-handle {
                opacity: .5;
            }
        }

        &.dragging, &.ui-draggable-dragging, &.active, &:active {
            > .card {
                @include cardDrag;
            }
        }

        &.long {
            
            .text {
                p {
                    @include typeBody;
                }
                
                .card {
                    max-width: $articleWidth * .75;
                }
            }
        }
                
        // NEW ELEMENT
        
        &.add-element, &.editing {
            
            &:hover {
                author {
                    opacity: 0;
                }
            }

            .card {
                @include cardHover;
                border-style: dashed !important;
 
                &.text {
                    color: $colorType;
                    background-color: $colorCardBackground;
                }
            }            
        }
        
        &.add-element{
            
            .card {
                width: $articleWidth !important;

                .autogrow-textarea-mirror {
                    width: $articleWidth !important;
                }
            }
        }
        
        // EDITING 
        
        &.editing {
            
        }
        
        // CONTENTS
        
        textarea {
            width: 100%;
            height: $baseline;
            color: $colorType;
            background-color: transparent;
            @include typeHeader;
            font-style: italic;
        }
        
        author {
            @include typeBodySmallCaps;
            line-height: 1em;
            position: absolute;
            display: block;
            color: $colorTypeLight;
            background: $colorAccent;
            margin-left: -$cardBorderWidth;
            text-indent: $cardBorderWidth;
            padding: $cardPadding;
            top: 0;
            left: 0;
            opacity: 0;
            white-space: nowrap;
            z-index: -900;
//             @include box-shadow($cardBoxShadowDimensions $colorAccent);
            @include transform(translate3d(0,0,0));
            @include transition(.25s $defaultCurve);
            @include transition-property(opacity,
                                         transform,
                                 -webkit-transform,
                                    -moz-transform);
        }
        
        // CONTENT
        
        .card {
            position: relative;
            max-width: $articleWidth;
                    transform-origin: bottom right;
            -webkit-transform-origin: bottom right;
            @include transition(.125s $defaultCurve);
            @include transition-property(transform,
                                 -webkit-transform,
                                    -moz-transform,
                                         box-shadow,
                                 -webkit-box-shadow,
                                    -moz-box-shadow,
                                         background-color,
                                         color);

            &.text {
                @include cardStyle;
                @include typeHeader;
                background: $colorType;
                color: $colorCardBackground;
                font-style: italic;
                border: 0;
            }

            &.image {
                width: $articleWidth;
            }
            
            &.website {
                               
                &:hover {
                    .text {
                        border-color: $colorAccent !important;
                        color: $colorAccent;
                    }
                }                
                
                .text {
                    position: relative;
                    z-index: 2;
                    @include cardStyle;
                    border: $cardBorder;
                    
                    &:hover {
//                         @include hoverLinkAnimation;
                        background-color: $colorAccent;
                        color: $colorTypeLight;
                    }
                    
                    &:after {
                        content: "›";
                        font-size: $typeHeaderSize;
                        font-weight: $fontWeightLight;
                        position: absolute;
                        display: block;
                        height: 1em;
                        margin-top: -.75em;
                        top: 50%;
                        right: $gutter/4;
                    }

                    .title p {
                        line-height: 1.25em;
                    }

                    .url p {
//                         margin-top: $leading/4;
                        @include typeBodySmallCaps;
                    }
                }

                &.image {
                    max-height: $baseline * 24;
                }
            }

            
            &.caption, &.comment {                       
                // background-color: $colorCardBackgroundLight;
            }

            img {
                width: 100%;
                margin-bottom: -9.5pt;
                background-color: $colorCardBackground;
            }
        }
    }
}

